<resources>
    <string name="app_name">ShoeStore</string>

    <!-- strings of LoginFragment -->
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="email_hint">Insert email</string>
    <string name="password_hint">Insert password</string>
    <string name="login_label">Login</string>
    <string name="register_label">Register</string>
    <string name="wrong_credential">Wrong email or password</string>
    <string name="invalid_credential">Invalid email or password less than 6 characters</string>

    <!-- strings of WelcomeFragment -->
    <string name="welcome">Welcome</string>
    <string name="welcome_back">Welcome back</string>
    <string name="go_to_instructions">instructions</string>


    <!-- strings of InstructionFragment -->
    <string name="go_to_list">continue</string>
    <string name="instruction">INSTRUCTION</string>
    <string name="app_description">In this app you can sell the shoes you no longer wear by following these steps:</string>
    <string name="steps_description">1) Check if the shoe is already present \n\n2) add your shoe with the add function \n\n3) We will notify you when our customer chooses your shoe</string>

    <!-- strings for ShoeDateil & ShoeList -->
    <string name="shoe">added_shoe</string>
    <string name="name">Name:    </string>
    <string name="company">Company:</string>
    <string name="size">Size:</string>
    <string name="description">Description:</string>
    <string name="save">save</string>

    <!--As suggested, I insert here the strings needed for input error for creating a shoe -->

    <!-- string of input error shoe -->
    <string name="name_error_input">Name must be not empty</string>
    <string name="size_error_input">Size must be a positive value</string>
    <string name="company_error_input">Company must be not empty</string>
    <string name="description_error_input">Description must be not empty</string>

    <!-- menu items -->
    <string name="logout">Logout</string>

</resources>
