<?xml version="1.0" encoding="utf-8"?><!-- Introduced DataBinding on MainActivity Layout-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <!-- I chose to manage this layout with ConstraintLayout because I need to manage many views with horizontal hierarchy -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.LoginFragment">

        <TextView
            android:id="@+id/email_label_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="76dp" />

        <TextView
            android:id="@+id/password_label_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="150dp" />

        <EditText
            android:id="@+id/email_edittext"
            android:hint="@string/email_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/password_edittext"
            android:hint="@string/password_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/login_button"
            android:text="@string/login_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/register_button"
            android:text="@string/register_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>